sorry for late, but i will do my best. please run it

--- a/homework/src/index.css
+++ b/homework/src/index.css
@@ -12,10 +12,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.card-group{
-  display: -ms-flexbox;
-  width: 400px;
+
+.container-fluid img{
+  width: 50px;
 }
-.card-class{
+.container-fluid{
+  background-color: rgba(244, 244, 244, 0.916);
+  position:static;
   
+}
+.navbar-brand{
+  font-family: 'Kantumruy Pro', sans-serif, Important;
+}
+.card1{
+  text-align: center;
+  display: block;
+  /* background-color: black; */
+}
+.card1 h4{
+  color: rgb(24, 24, 255)
+}
+
+.first-slide img{
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+}
+.container-fluid{
+  background-color: rgb(255, 202, 145);
+
+}
+.container-fluid img{
+  width: 75px;
+}
+.card3{
+  padding-left: 10%;
+  background-color: rgb(255, 202, 145)  ;
 }
